# MLSC

./: README.md  README.txt  _exctract.py  config.json  note  painter.ipynb  pt_visual.ipynb  requirements.txt  run.py  temp.md
code/DeSCo/: .pre-commit-config.yaml  README.md  ablation_gnns.py  ablation_wo_canonical.py  baseline.py  desco_run.py  gen_dataset.py  main.py  note  requirements.txt
code/ESC-GNN/: GraphCountDataset.py  _evaluate.py  _finetune.py  esc_run.py  experiment_config.yaml  reproduce.py  run_graphcount.py
code/I2GNN/: _evaluate.py  _finetune.py  _plot.ipynb  data_processing.py  experiment_config.yaml  experiment_config_1.yaml  experiment_config_2.yaml  i2_run.py  reproduce.py  run_count.py  run_count_new.py
code/LPP-code/: ESC-GNN_pip_packages.txt  README.md  setup.py
code/escape/: BUG_LOG  README  Results.xlsx  escape_run.py
code/evoke/: Graph.cpp  GraphIO.cpp  LICENSE  Makefile  README.md  common.mk  (+3 more)
code/motivo/: CMakeLists.txt  LICENSE  README.md  git_id.cmake  motivo_run.py  testing.cmake
code/motivo/graphs/: test-graph.txt
code/motivo/scripts/: leftmost_bit_tie_lookup_table.py  motivo.sh  motivo_utils.py
code/motivo/src/: config.h.in
code/motivo/src/builder/: CMakeLists.txt  ColorCodingBuilder.h  ColorCodingHashmap.h  MultithreadedBuilder.cpp  MultithreadedBuilder.h  SequentialBuilder.cpp  SequentialBuilder.h  Size1Builder.cpp  Size1Builder.h  main.cpp
code/motivo/src/common/: CMakeLists.txt  OptionsParser.cpp  OptionsParser.h  util.cpp  util.h
code/motivo/src/common/graph/: UndirectedGraph.cpp  UndirectedGraph.h
code/motivo/src/common/io/: BaseRecordSource.h  CompressedRecordFile.cpp  CompressedRecordFile.h  ConcurrentFIFO.h  ConcurrentWriter.cpp  ConcurrentWriter.h  PropertyStore.cpp  PropertyStore.h  RecordCompressor.cpp  RecordCompressor.h
code/motivo/src/common/platform/: leftmost_bit_tie_lut.h  platform.cpp  platform.h
code/motivo/src/common/random/: AliasMethodSampler.h  Random.h  RangeSampler.h
code/motivo/src/common/treelets/: Treelet.cpp  Treelet.h  TreeletStructureSelector.cpp  TreeletStructureSelector.h  TreeletTable.cpp  TreeletTable.h  TreeletTableCollection.cpp  TreeletTableCollection.h
code/motivo/src/merger/: CMakeLists.txt  merger.cpp
code/motivo/src/sampler/: AdaptiveSampler.cpp  AdaptiveSampler.h  CMakeLists.txt  ColorCodingSpanningTreeCounter.cpp  ColorCodingSpanningTreeCounter.h  DynamicSequencer.h  Occurrence.cpp  Occurrence.h  OccurrenceSampler.cpp  OccurrenceSampler.h  OccurrenceStarSampler.cpp  OccurrenceStarSampler.h  SampleTable.cpp  SampleTable.h  SpanningTreeCounter.cpp  SpanningTreeCounter.h  TimeoutThreadSync.h  TreeletSampler.cpp  TreeletSampler.h  ValueSortedMap.h  include_nauty.h  sampler_main.cpp  sampler_opts.cpp  sampler_opts.h
code/motivo/src/tests/: CMakeLists.txt  CompressedRecordFile.cpp  SpanningTreeCounter.cpp  Treelet.cpp  doctest.h  leftmost_bit_tie.cpp  tests.cpp
code/motivo/src/tools/: CMakeLists.txt  decompose.cpp  graph.cpp  homomorphism.cpp  treelet-counts.cpp
code/motivo/wrappers/: run.py
code/scope/: CMakeLists.txt  README.md  scope_run.py
code/scope/config/: config.h
code/scope/counting/: CMakeLists.txt  aggregation.cpp  aggregation.h  equation.cpp  equation.h  execution.cpp  execution.h  forest.cpp  forest.h  triangle.cpp  triangle.h
code/scope/executable/: 5voc.cpp  CMakeLists.txt  batch.cpp  command.cpp  command.h  compare_homo.cpp  prepare.cpp  scope.cpp
code/scope/exp/data_graph/: t20.txt  web-spam.txt
code/scope/exp/larger_pattern/5_node/: 5_star_periphery
code/scope/exp/larger_pattern/6_node/: 6_circle
code/scope/exp/larger_pattern/7_node/: 7_circle
code/scope/exp/larger_pattern/8_node/: 8_circle
code/scope/exp/others/: 3_star  5_circle  5_star  6_star_core  6_star_periphery  7_clique  7_star_core  7_star_periphery  8_star_core  8_star_periphery
code/scope/exp/pattern_graph/5voc/: 15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  47.txt  48.txt  49.txt  50.txt  51.txt  52.txt  53.txt  54.txt  (+18 more)
code/scope/exp/pattern_graph/6voc/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+367 more)
code/scope/exp/pattern_graph/7voc/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
code/scope/graph/: CMakeLists.txt  graph.cpp  graph.h
code/scope/plan/: CMakeLists.txt  cost_estimator.cpp  cost_estimator.h  decompose.cpp  decompose.h  tree.cpp  tree.h
code/scope/utility/: CMakeLists.txt  clique.cpp  clique.h  command_parser.cpp  command_parser.h  compute_set_intersection.cpp  compute_set_intersection.h  utils.cpp  utils.h
code/scope/utility/automorphism/: NRswitchg  addedgeg  addptg  amtog  assembleg  biplabg  catg  complg  config.status  configure  converseg  copyg  cubhamg  deledgeg  delptg  directg  dreadnaut  dretodot  dretog  edgetransg  genbg  genbgL  geng  gengL  genquarticg  genrang  genspecialg  gentourng  gentreeg  hamheuristic  labelg  libnauty,a  linegraphg  listg  makefile  multig  nauty.h  nbrhoodg  newedgeg  pickg  (+9 more)
code/scope/utility/glpk-5.0/: Makefile  config.status  libtool
code/scope/utility/glpk-5.0/examples/: Makefile  glpsol
code/scope/utility/glpk-5.0/examples/.libs/: glpsol
code/scope/utility/glpk-5.0/src/: Makefile  libglpk.la  libglpk_la-hbm.lo  libglpk_la-rgr.lo  libglpk_la-spm.lo
code/scope/utility/glpk-5.0/src/.libs/: libglpk.lai
code/scope/wrappers/: run.py
configs/: config.json  desco.json  evoke.json  i2gnn.json  motivo.json  scope.json
trash/: desco_run_new.py  output_edges.txt  output_edges_reordered.txt
(+410 files in other folders)
